--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit==1.28.0
-spacy==3.5.4
-pdfplumber==0.9.0
-python-docx==0.8.11
-nltk==3.8.1
-plotly==5.15.0
-pandas==1.5.3
+streamlit>=1.28.0
+spacy>=3.8.0
+pdfplumber>=0.11.0
+python-docx>=1.0.0
+nltk>=3.8.0
+plotly>=5.15.0
+pandas>=2.0.0
+numpy>=1.23.0
